Fixed header, edited works section gallery

--- a/css/layout/_footer.scss
+++ b/css/layout/_footer.scss
@@ -29,7 +29,7 @@ footer {
       float: left;
       margin: 0 20px;
       &:after {
-        @include after-before;
+        @include after-before('');
         clear: left;
       }
     }
