--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,6 @@
 /* line 1, helpers/_utilities.scss */
 .clearfix {
-  content: '';
+  content: "";
   display: block;
   clear: both;
 }
@@ -104,8 +104,9 @@ header {
   right: 0;
   padding: 30px;
   z-index: 9999999999999999999999999999999999999999999999999999999999999999999;
+  background-image: linear-gradient(to top, rgba(0, 0, 0, 0) 0%, #2c3e50 100%);
 }
-/* line 10, layout/_header.scss */
+/* line 11, layout/_header.scss */
 header .header-nav-link {
   font-family: 'Lato', sans-serif;
   font-weight: 400;
@@ -115,28 +116,28 @@ header .header-nav-link {
   border-radius: 0 0 5px 5px;
 }
 
-/* line 19, layout/_header.scss */
+/* line 20, layout/_header.scss */
 .header-nav-link.hero.active {
   background: #74c7d5;
 }
 
-/* line 23, layout/_header.scss */
+/* line 24, layout/_header.scss */
 .header-nav-link.services.active {
   background: #df5c64;
 }
 
-/* line 27, layout/_header.scss */
+/* line 28, layout/_header.scss */
 .header-nav-link.about.active {
   background: #91778e;
 }
 
-/* line 31, layout/_header.scss */
+/* line 32, layout/_header.scss */
 .header-nav-link.work.active {
   background: #a1ca6c;
 }
 
-/* line 35, layout/_header.scss */
-.header-nav-link.contacts.active {
+/* line 36, layout/_header.scss */
+.header-nav-link.contact-us.active {
   background: #82c8bd;
 }
 
@@ -202,7 +203,7 @@ footer ul li {
 }
 /* line 31, layout/_footer.scss */
 footer ul li:after {
-  content: '';
+  content: "";
   display: block;
   clear: left;
 }
@@ -357,7 +358,7 @@ footer ul li:after {
 }
 /* line 12, sections/_about.scss */
 #about #MTT:after {
-  content: '';
+  content: "";
   display: block;
   position: absolute;
   bottom: -16px;
@@ -454,7 +455,7 @@ footer ul li:after {
 }
 /* line 86, sections/_about.scss */
 .team-member-card ul li:after {
-  content: '';
+  content: "";
   display: block;
   clear: left;
 }
@@ -555,14 +556,58 @@ footer ul li:after {
   background: #fff;
   color: #727272;
   border-radius: 5px;
+  position: relative;
 }
-/* line 42, sections/_work.scss */
+/* line 44, sections/_work.scss */
+#work #grid-container .grid-item::before {
+  content: "+";
+  display: block;
+  position: absolute;
+  top: 0;
+  left: 0;
+  background: rgba(61, 77, 41, 0.7);
+  color: #fff;
+  font-size: 24px;
+  line-height: 165px;
+  width: 215px;
+  height: 165px;
+  border-radius: 5px 5px 0 0;
+  opacity: 0;
+  cursor: pointer;
+  transition: all .3s;
+}
+/* line 60, sections/_work.scss */
+#work #grid-container .grid-item::after {
+  content: "";
+  display: block;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  background: transparent;
+  border: 1px solid #fff;
+  position: absolute;
+  top: 40%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  opacity: 0;
+  cursor: pointer;
+  transition: all .3s;
+}
+/* line 73, sections/_work.scss */
+#work #grid-container .grid-item:hover::before {
+  opacity: 1;
+}
+/* line 76, sections/_work.scss */
+#work #grid-container .grid-item:hover::after {
+  opacity: 1;
+}
+/* line 79, sections/_work.scss */
 #work #grid-container .grid-item .grid-img {
   width: 215px;
   height: 165px;
   border-radius: 5px 5px 0 0;
 }
-/* line 47, sections/_work.scss */
+/* line 84, sections/_work.scss */
 #work #grid-container .grid-item p {
   line-height: 50px;
 }
