--- a/css/layout/_header.scss
+++ b/css/layout/_header.scss
@@ -7,6 +7,18 @@ header {
   padding: 30px;
   z-index: 9999999999999999999999999999999999999999999999999999999999999999999;
   background-image: linear-gradient(to top, rgba(0, 0, 0, 0) 0%, #2c3e50 100%);
+  @media screen and (max-width: 830px) {
+    padding: 5px 0 0 5px;
+  }
+  @media screen and (max-width: 550px) {
+    padding: 5px 15px 0;
+    display: block;
+  }
+
+  .icon {
+    font-size: 15px;
+    display: none;
+  }
 
   .header-nav-link {
     @include lato;
@@ -14,6 +26,9 @@ header {
     padding: 40px 25px 16px;
     margin: 0 5px;
     border-radius: 0 0 5px 5px;
+    @media screen and (max-width: 830px) {
+      padding: 15px 5px 5px;
+    }
   }
 }
 
@@ -35,4 +50,56 @@ header {
 
 .header-nav-link.contact-us.active {
   background: $contactsNavAndPlaceholderAndFooterSocialBgClr;
+}
+
+.header-nav-link.hero.active, .header-nav-link.services.active, .header-nav-link.about.active, .header-nav-link.work.active, .header-nav-link.contact-us.active {
+  @media screen and (max-width: 550px) {
+    background: transparent;
+  }
+}
+
+.top-nav.responsive .header-nav-link.hero {
+  @media screen and (max-width: 550px) {
+    padding: 40px 5px 5px;
+  }
+}
+
+.top-nav a {
+  @media screen and (max-width: 550px) {
+    display: none;
+  }
+}
+
+.top-nav a.icon {
+  @media screen and (max-width: 550px) {
+    display: inline-block;
+    float: right;
+    &:after {
+      @include after-before('');
+      clear: both;
+    }
+  }
+}
+
+.top-nav.responsive {
+  @media screen and (max-width: 550px) {
+    position: relative;
+  }
+}
+
+.top-nav.responsive .icon {
+  @media screen and (max-width: 550px) {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+}
+
+.top-nav.responsive a {
+  @media screen and (max-width: 550px) {
+    float: none;
+    display: block;
+    text-align: left;
+    padding: 5px;
+  }
 }
